# operator-common-iterator-claude

./: .gitignore  CLAUDE.md  README.md  executor.html  pyproject.toml  requirements.txt  scheme.html  servers.example.json
.claude/: settings.json
docs/: ARTIFACT_CONTRACTS.md  HS_TTK_WORKFLOW.md  MIGRATION.md  OBSERVABILITY.md  TORCH_NPU_CONSTRAINT_PROMPT.md  USER_GUIDE.md  WORKFLOW.md
executer/: models.py  report_parser.py  runner.py  ssh.py  ttk_runner.py
generators/: __init__.py  facade.py  nz_postprocess.py  operator_handle_main.py
opci/: __init__.py  cli.py  config.py  server.py
operator_docs/: aclnnAlltoAllMatmul.md  aclnnBatchMatMulWeightNz.md  aclnnCalculateMatmulWeightSizeV2.md  aclnnFFNV3.md  aclnnGroupedMatmulV5.md  aclnnNpuFormatCast.md  aclnnReflectionPad1dBackward.md  aclnnSwinAttentionScoreQuant.md
prompts/: CHANGELOG.md  examples.md  hs_constraints_extract_v1.md  hs_constraints_extract_v2.md  hs_constraints_extract_v2_changes.md  operator_constraints_extract_v1.md  operator_constraints_extract_v2.md  operator_constraints_extract_v3.md  operator_constraints_extract_v4.md  operator_constraints_extract_v5.md  torch_npu_constraints_extract_v1.md  torch_npu_constraints_extract_v2.md
scripts/: apply_conflict_resolution.py  apply_constraints_patch.py  apply_supplement_constraints.py  atc_to_ttk.py  atk_to_ttk_aclnn.py  batch_state.py  cca_translate_cli.py  classify_operator.py  collect_operator_source.py  constraints_to_ttk_csv.py  cpu_validate_cases.py  execute_cases.py  execute_ttk_aclnn.py  extract_source_constraints.py  generate_cases.py  (+13 more)
(+235 files in other folders)
