[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opci"
version = "0.1.0"
description = "CANN operator iteration test MCP Server + Agent Pack"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.7",
    "pydantic>=2.0",
    "numpy>=1.26",
    "torch>=2.0",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "packaging>=23.0",
    "typing_extensions>=4.0",
    "z3-solver>=4.12",
    "asyncssh>=2.14",
    "openpyxl>=3.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
opci = "opci.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["opci"]

[tool.hatch.build.targets.wheel.force-include]
"opci/resources/.mcp.json" = "opci/resources/.mcp.json"
